soc: qcom: panel_event_notifier: add panel_event_notifier driver
Add notification framework to notify all clients
interested in getting various display panel events
like power on, power off, FPS change, etc. Clients
can use these notifications for power saving or
align its operations with display panel power state.
Add Config and make rules for panel_event_notifier
driver.

Change-Id: Ic4ed7f3207111824a5da84ed2a5a2e0e50e925f0
Signed-off-by: Shashank Babu Chinta Venkata <sbchin@codeaurora.org>
Signed-off-by: Rohith Iyer <quic_rohiiyer@quicinc.com>

--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -392,6 +392,16 @@ config QCOM_SECURE_BUFFER
 	  use this memory and no unauthorized access is made to the
 	  buffer.
 
+config QCOM_PANEL_EVENT_NOTIFIER
+	tristate "panel event notifier"
+	depends on DRM
+	help
+	  Enabling this option adds panel event notifier driver.
+	  This driver is responsible for notifying clients interested in display
+	  panel events such as panel on , panel off, fps change etc.  clients
+	  can use these notifications for power saving or align its operations
+	  with display panel power state.
+
 source "drivers/soc/qcom/mem_buf/Kconfig"
 
 config QTI_PMIC_GLINK
