bus: mhi: host: Add snapshot of MHI bus misc driver
This is a snapshot of MHI bus misc driver from msm-5.15
commit 1a84bdeed262 ("bus: mhi: core: Add snapshot
of MHI bus misc driver").

Change-Id: If606eee09983d27e291acb7fb85f268a1fe63cb2
Signed-off-by: Lazarus Motha <quic_lmotha@quicinc.com>

--- a/drivers/bus/mhi/host/Kconfig
+++ b/drivers/bus/mhi/host/Kconfig
@@ -29,3 +29,11 @@ config MHI_BUS_PCI_GENERIC
 	  This driver provides MHI PCI controller driver for devices such as
 	  Qualcomm SDX55 based PCIe modems.
 
+config MHI_BUS_MISC
+	bool "Support for miscellaneous MHI features"
+    depends on MHI_BUS
+    help
+      Miscellaneous features support for MHI Bus driver includes IPC logs,
+      introduction of a list of controllers for debug using ramdumps and
+      other features not present upstream such as Dynamic Resource Vote,
+      SFR parsing using RDDM dumps, scanning for the RDDM cookie and more.
