bus: mhi: Add MHI devices and controllers stack in makefile
Enable MHI devices and controllers stack as they are now
present in the host directory.

Change-Id: I23d8f69150020921ac1dcf9e1463c079cc3ab309
Signed-off-by: Lazarus Motha <quic_lmotha@quicinc.com>

--- a/drivers/bus/mhi/Kconfig
+++ b/drivers/bus/mhi/Kconfig
@@ -7,3 +7,5 @@
 
 source "drivers/bus/mhi/host/Kconfig"
 source "drivers/bus/mhi/ep/Kconfig"
+source "drivers/bus/mhi/devices/Kconfig"
+source "drivers/bus/mhi/controllers/Kconfig"
