--- a/drivers/bus/mhi/Makefile
+++ b/drivers/bus/mhi/Makefile
@@ -1,5 +1,11 @@
 # Host MHI stack
-obj-$(CONFIG_MHI_BUS) += host/
+obj-y  += host/
 
 # Endpoint MHI stack
-obj-$(CONFIG_MHI_BUS_EP) += ep/
+obj-y += ep/
+
+# MHI Devices stack
+obj-y += devices/
+
+#MHI Controller stack
+obj-y += controllers/
