dma-heap: qcom: Snapshot of dma-buf heaps Makefile and Kconfig for sun
Add snapshot for dma-buf-heaps infrastructure from qcom-6.1
commit 413e89d47bb8 ("pci: msm: Prevent register access when pcie is in
drv").

Change-Id: Icd5e7729252e727a351896957a5438d046986747
Signed-off-by: Patrick Daly <quic_pdaly@quicinc.com>

--- a/drivers/iommu/Kconfig
+++ b/drivers/iommu/Kconfig
@@ -563,4 +563,16 @@ config SPRD_IOMMU
 
 	  Say Y here if you want to use the multimedia devices listed above.
 
+config QCOM_LAZY_MAPPING
+	tristate "Reference counted iommu-mapping support"
+	depends on QCOM_DMABUF_HEAPS
+	depends on IOMMU_API
+	help
+	  DMA-BUFs may be shared between several software clients.
+	  Reference counting the mapping may simplify coordination between
+	  these clients, and decrease latency by preventing multiple
+	  map/unmaps of the same region.
+
+	  If unsure, say N here.
+
 endif # IOMMU_SUPPORT
