--- a/drivers/iommu/Makefile
+++ b/drivers/iommu/Makefile
@@ -30,6 +30,7 @@ obj-$(CONFIG_HYPERV_IOMMU) += hyperv-iommu.o
 obj-$(CONFIG_VIRTIO_IOMMU) += virtio-iommu.o
 obj-$(CONFIG_IOMMU_SVA) += iommu-sva.o io-pgfault.o
 obj-$(CONFIG_SPRD_IOMMU) += sprd-iommu.o
+obj-$(CONFIG_QCOM_LAZY_MAPPING) += msm_dma_iommu_mapping.o
 obj-$(CONFIG_APPLE_DART) += apple-dart.o
 obj-$(CONFIG_QCOM_IOMMU_UTIL) += qcom_iommu_util.o
 qcom_iommu_util-y += qcom-iommu-util.o
