--- a/drivers/clk/qcom/Kconfig
+++ b/drivers/clk/qcom/Kconfig
@@ -812,6 +812,60 @@ config SM_GCC_PINEAPPLE
           Say Y if you want to use peripheral devices such as UART,
           SPI, I2C, USB, SD/UFS, PCIe etc.
 
+config SM_VIDEOCC_PINEAPPLE
+	tristate "Pineapple Video Clock Controller"
+	depends on SM_GCC_PINEAPPLE
+	help
+	  Support for the video clock controller on Qualcomm Technologies, Inc.
+	  Pineapple devices.
+	  Say Y if you want to support video devices and functionality such as
+	  video encode/decode.
+
+config SM_CAMCC_PINEAPPLE
+	tristate "Pineapple Camera Clock Controller"
+	depends on SM_GCC_PINEAPPLE
+	help
+	  Support for the camera clock controller on Qualcomm Technologies, Inc
+	  Pineapple devices.
+	  Say Y if you want to support camera devices and functionality such as
+	  capturing pictures.
+
+config SM_DISPCC_PINEAPPLE
+	tristate "Pineapple Display Clock Controller"
+	depends on SM_GCC_PINEAPPLE
+	help
+	  Support for the display clock controller on Qualcomm Technologies, Inc
+	  Pineapple devices.
+	  Say Y if you want to support display devices and functionality such as
+	  splash screen.
+
+config SM_DEBUGCC_PINEAPPLE
+	tristate "Pineapple Debug Clock Controller"
+	depends on COMMON_CLK_QCOM
+	help
+	  Support for the debug clock controller on Qualcomm Technologies, Inc
+	  Pineapple devices.
+	  Say Y if you want to support the debug clocks such as
+	  clock measurement functionality.
+
+config SM_GPUCC_PINEAPPLE
+	tristate "Pineapple Graphics Clock Controller"
+	depends on SM_GCC_PINEAPPLE
+	help
+	  Support for the graphics clock controller on Qualcomm Technologies, Inc
+	  Pineapple devices.
+	  Say Y if you want to support graphics controller devices and
+	  functionality such as 3D graphics.
+
+config SM_TCSRCC_PINEAPPLE
+	tristate "Pineapple Top-Level CSR Clock Controller"
+	depends on SM_GCC_PINEAPPLE
+	help
+	  Support for the TCSR clock controller on Qualcomm Technologies, Inc
+	  Pineapple devices.
+	  Say Y if you want to support miscellaneous top-level clocks
+	  such as for the PHY references.
+
 config SM_CAMCC_SUN
         tristate "SUN Camera Clock Controller"
         depends on SM_GCC_SUN
