--- a/drivers/clk/qcom/Makefile
+++ b/drivers/clk/qcom/Makefile
@@ -120,6 +120,13 @@ obj-$(CONFIG_SM_GCC_8450) += gcc-sm8450.o
 obj-$(CONFIG_SM_GCC_SUN) += gcc-sun.o
 obj-$(CONFIG_SM_GCC_8550) += gcc-sm8550.o
 obj-$(CONFIG_SM_GCC_PINEAPPLE) += gcc-pineapple.o
+obj-$(CONFIG_SM_GCC_PINEAPPLE) += gcc-pineapple.o
+obj-$(CONFIG_SM_VIDEOCC_PINEAPPLE) += videocc-pineapple.o
+obj-$(CONFIG_SM_CAMCC_PINEAPPLE) += camcc-pineapple.o
+obj-$(CONFIG_SM_DISPCC_PINEAPPLE) += dispcc-pineapple.o
+obj-$(CONFIG_SM_DEBUGCC_PINEAPPLE) += debugcc-pineapple.o
+obj-$(CONFIG_SM_GPUCC_PINEAPPLE) += gpucc-pineapple.o
+obj-$(CONFIG_SM_TCSRCC_PINEAPPLE) += tcsrcc-pineapple.o
 obj-$(CONFIG_SM_CAMCC_SUN) += camcc-sun.o
 obj-$(CONFIG_SM_EVACC_SUN) += evacc-sun.o
 obj-$(CONFIG_SM_GPUCC_6350) += gpucc-sm6350.o
