usb: gadget: Add snapshot of QC USB function drivers
Snapshot of downstream USB function drivers used on QC platforms based
on qcom-6.1 commit 5d7b487eb0ea ("Merge "cpuidle: qcom-lpm: Add a device
enabled check before using it"").

Change-Id: Iac935a0b7e3600520c2a6d1e22a4d38558a11b83
Signed-off-by: Ronak Vijay Raheja <quic_rraheja@quicinc.com>

--- a/drivers/usb/gadget/function/Makefile
+++ b/drivers/usb/gadget/function/Makefile
@@ -54,3 +54,15 @@ usb_f_accessory-y		:= f_accessory.o
 obj-$(CONFIG_USB_F_ACC)		+= usb_f_accessory.o
 usb_f_audio_source-y		:= f_audio_source.o
 obj-$(CONFIG_USB_F_AUDIO_SRC)	+= usb_f_audio_source.o
+obj-$(CONFIG_USB_F_FS_IPC_LOGGING)	+= f_fs_ipc_log.o
+usb_f_cdev-y			:= f_cdev.o
+obj-$(CONFIG_USB_F_CDEV)	+= usb_f_cdev.o
+usb_f_ccid-y			:= f_ccid.o
+obj-$(CONFIG_USB_F_CCID)	+= usb_f_ccid.o
+usb_f_qdss-y			:= f_qdss.o u_qdss.o
+obj-$(CONFIG_USB_F_QDSS)	+= usb_f_qdss.o
+usb_f_gsi-y			:= f_gsi.o
+ifeq ($(CONFIG_USB_F_RNDIS),)
+usb_f_gsi-y			+= rndis.o
+endif
+obj-$(CONFIG_USB_F_GSI)		+= usb_f_gsi.o
