usb: repeater: Add snapshot of USB repeater drivers
Add USB repeater framework and QTI PMIC repeater driver based on
qcom-6.1 commit 5d7b487eb0ea ("Merge "cpuidle: qcom-lpm: Add a device
enabled check before using it"").

Change-Id: I84ec48e4bbad62c90209c076b55d7cb22d16a893
Signed-off-by: Ronak Vijay Raheja <quic_rraheja@quicinc.com>

--- a/drivers/usb/Kconfig
+++ b/drivers/usb/Kconfig
@@ -178,4 +178,6 @@ source "drivers/usb/typec/Kconfig"
 
 source "drivers/usb/roles/Kconfig"
 
+source "drivers/usb/repeater/Kconfig"
+
 endif # USB_SUPPORT
